<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.udacity.shoestore.utilities.Converters" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>

    <!--We use a ConstraintLayout here because the layout relies on
        placing elements in a specific manner.  Additionally, we
        need to make sure the buttons are designed a certain way -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_shoe_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_detail_shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.name}"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_shoe_size_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_shoe_name" />

        <EditText
            android:id="@+id/shoe_detail_shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={Converters.doubleToString(shoe.size)}"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_label" />


        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_company_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_shoe_size" />

        <EditText
            android:id="@+id/shoe_detail_shoe_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.company}"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_label" />


        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_shoe_company" />

        <EditText
            android:id="@+id/shoe_detail_shoe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={shoe.description}"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_cancel_button_text"
            android:theme="@style/CancelButton"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_shoe_description" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_save_button_text"
            android:theme="@style/SaveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_shoe_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>